--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "babel": {
     "presets": [
-      "es2015-node6"
+      "es2015-node6",
+      "stage-3"
     ]
   },
   "repository": {
@@ -35,6 +36,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "deep-freeze": "0.0.1",
