--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register"
   },
-  "babel": {
-    "presets": [
-      "es2015-node6",
-      "stage-3"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andela-emabishi/immutable-redux.git"
@@ -28,7 +22,7 @@
   },
   "homepage": "https://github.com/andela-emabishi/immutable-redux#readme",
   "dependencies": {
-    "immutable": "^3.8.1",
+    "immutable": "-b^3.8.1",
     "react": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0"
